--- a/.htaccess
+++ b/.htaccess
@@ -4,16 +4,16 @@ RewriteEngine on
 
 # Login
 
-RewriteRule ^login/(.*)(\/|\\)?$            /cms/index.php?page=login&redirect=$1       [NC,L]
-RewriteRule ^login$                         /cms/index.php?page=login                   [NC,L]
+RewriteRule ^login/(.*)(\/|\\)?$            index.php?page=login&redirect=$1       [NC,L]
+RewriteRule ^login$                         index.php?page=login                   [NC,L]
 
 # User
 
-RewriteRule ^user/(\d+)/.*$                 /cms/index.php?page=user&id=$1              [NC,L]
+RewriteRule ^user/(\d+)/.*$                 index.php?page=user&id=$1              [NC,L]
 
 # Nachrichten
 
-RewriteRule ^artikel-einreichen.?(html)?$   /cms/index.php?page=articleManagement       [NC,L]
-RewriteRule ^nachrichten\/(\d)+\/.*\.html$  /cms/index.php?page=article&id=$1           [NC,L]
-RewriteRule ^nachrichten\/?$                /cms/index.php?page=articles                [NC,L] # todo
+RewriteRule ^artikel-einreichen\.?(html)?$  index.php?page=articleManagement       [NC,L]
+RewriteRule ^nachrichten\/(\d)+\/.*\.html$  index.php?page=article&id=$1           [NC,L]
+RewriteRule ^nachrichten\/?$                index.php?page=articles                [NC,L] # todo
 
