--- a/.htaccess
+++ b/.htaccess
@@ -16,4 +16,5 @@ RewriteRule ^user/(\d+)/.*$                 index.php?page=user&id=$1           
 RewriteRule ^artikel-einreichen\.?(html)?$  index.php?page=articleManagement       [NC,L]
 RewriteRule ^nachrichten\/(\d)+\/.*\.html$  index.php?page=article&id=$1           [NC,L]
 RewriteRule ^nachrichten\/?$                index.php?page=articles                [NC,L] # todo
-RewriteRule ^nachrichten\/(\d)+\/.*\/?      index.php?page=articles&cat=$1
+RewriteRule ^nachrichten\/(\d)+\/.*\/$      index.php?page=articles&cat=$1
+
