--- a/.htaccess
+++ b/.htaccess
@@ -17,4 +17,5 @@ RewriteRule ^artikel-einreichen\.?(html)?$  index.php?page=articleManagement    
 RewriteRule ^nachrichten\/(\d)+\/.*\.html$  index.php?page=article&id=$1           [NC,L]
 RewriteRule ^nachrichten\/?$                index.php?page=articles                [NC,L] # todo
 RewriteRule ^nachrichten\/(\d)+\/.*\/$      index.php?page=articles&cat=$1
+RewriteRule ^nachrichten\/andere\/$         index.php?page=articles&cat=a
 
