--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .idea/*
 templates_c/*
 *.log
-portal/assets/images/*
+portal/assets/images/sp/*
 templates_c/71071a0374b2cab6ce482817c9bd4bddd3414960_0.file.navigation.tpl.php
