--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ templates_c/*
 *.log
 portal/assets/images/sp/*
 templates_c/71071a0374b2cab6ce482817c9bd4bddd3414960_0.file.navigation.tpl.php
+templates_c/71071a0374b2cab6ce482817c9bd4bddd3414960_0.file.navigation.tpl.php
